# roop

./: README.md  pyproject.toml
roop/: core.py  globals.py  ui_flet.py
roop/processors/frame/: face_swapper.py
