[project]
name = "roop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "flet>=0.80.5",
    "gfpgan>=1.3.8",
    "insightface>=0.7.3",
    "numpy>=2.3.5",
    "onnxruntime>=1.24.1",
    "opennsfw2>=0.15.2",
    "pillow>=12.1.0",
    "psutil>=7.2.2",
    "tensorflow>=2.20.0",
    "tk>=0.1.0",
    "tkinterdnd2-universal>=1.7.3",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
numpy = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
