[project]
name = "roop"
version = "0.1.0"
description = "Roop revived"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gfpgan",
    "insightface",
    "onnxruntime",
    "onnxruntime-gpu",
    "opencv-python",
    "opennsfw2",
    "psutil",
    "tensorflow",
]

[dependency-groups]
dev = [
    "roop[flet]",
]

[project.optional-dependencies]
flet = [
    "flet>=0.80.5",
]
tk = [
    "customtkinter>=5.2.2",
    "tk>=0.1.0",
    "tkinterdnd2>=0.4.3",
]

[tool.uv.sources]
numpy = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
